# AI-Agent-System

./: .env.example  .gitignore  CLAUDE.md  README.md  TASKS.md  agent_dashboard.html  pyproject.toml  requirements.txt
agent/core/: __init__.py  agent.py  errors.py  executor.py  logger.py  memory.py  planner.py  state.py
agent/prompts/: __init__.py  loader.py
agent/prompts/templates/: reflection_prompt.txt  system_prompt.txt  task_prompt.txt  tool_selection_prompt.txt
agent/tools/: __init__.py  base_tool.py  calculator.py  database_tool.py  file_handler.py  registry.py  web_search.py
agent/workflows/: __init__.py  base_workflow.py  multi_step_flow.py  research_flow.py  task_flow.py
api/: __init__.py  dependencies.py  server.py
api/controllers/: agent_controller.py  memory_controller.py  tool_controller.py
api/routes/: agent_routes.py  memory_routes.py  tool_routes.py
config/: config.yaml  logging.yaml  settings.py
llm/: __init__.py
llm/embeddings/: __init__.py  embed.py  utils.py
llm/providers/: __init__.py  anthropic.py  base_provider.py  local_model.py  openai.py
memory/: __init__.py  glossary.md
memory/context/: company.md
memory/long_term/: __init__.py  store.py
memory/projects/: ai-agent-system.md
memory/short_term/: __init__.py  buffer.py
memory/vector_store/: __init__.py  retrieval.py  vector_db.py
scripts/: reset_storage.py  run_agent.py  seed_memory.py
tests/: test_agent.py  test_api.py  test_calculator.py  test_executor.py  test_memory.py  test_planner.py  test_registry.py  test_tools.py  test_workflows.py
